freeciv-web/src/main/webapp/css/civclient.css
/* ... */
.chatbox_dialog .ui-dialog-titlebar {
  background: #cb842e url("/images/ui-widget-header.png") 100% 50% repeat-x;
}

.ui-widget-content a {
  color: #f8ff8a;
}

.govt_button {
  width: 60%;
  margin: 6px;
}

#governments {
  text-align: center;
}

.Democracy {
  background-image: url(/images/gov.democracy.png) !important; 
}

.Anarchy {
  background-image: url(/images/gov.anarchy.png) !important; 
}

.Republic {
  background-image: url(/images/gov.republic.png) !important; 
}

.Despotism {
  background-image: url(/images/gov.despotism.png) !important; 
}

.Communism {
  background-image: url(/images/gov.communism.png) !important; 
}

.Monarchy {
  background-image: url(/images/gov.monarchy.png) !important; 
}

.flag_self {
  float: left;
  width: 140px;
}

.flag_counterpart {
  float: right;
  width: 140px;

}

.context-menu-list {
  background: none;
}

.context-menu-item {
  font-size: 125%;
  background-color: rgba(200,200,200,0.75);
}

@media (max-width: 900px) {
  .context-menu-item {
    font-size: 150%;
    background-color: rgba(200,200,200,0.75);
  }
}

.chatbox_text_tileinfo {
  cursor:pointer;
}

/* city tabs will be on the bottom of the dialog. */
#city_tabs .ui-tabs-nav { 
    position: absolute; 
    left: 0.25em; 
    right: 0.25em; 
    bottom: 0.25em; 
    padding: 0em 0.2em 0.2em; 
} 
#city_tabs .ui-tabs-nav li { 
    border-top: none; 
    border-bottom: 1px solid #ccc; 
    -moz-border-radius: 0px 0px 4px 4px; 
    -webkit-border-radius: 0px 0px 4px 4px; 
    border-radius: 0px 0px 4px 4px; 
} 
#city_tabs .ui-tabs-nav li.ui-tabs-selected, 
#city_tabs .ui-tabs-nav li.ui-state-active { 
    top: -1px; 
}


#prod_buttons {
  float: right;
  clear: both;
}

.ui-tooltip {
    white-space: pre-line;
    z-index: 100002;
    position: absolute;
}

.no-close .ui-dialog-titlebar-close {
  display: none 
}

.nation_flags {
  width: 44px;
}


#prod_descr {
  padding: 10px;
  margin-left: 55px;
}


.scorechart {
  height:  530px;
  width: 100%;
  background-color: white;
  overflow: hidden;

}

#scores_dialog {
  overflow: hidden;
}

.current_focus_unit {
  border: 2px solid white;
  background-color: rgba(240,240,240,0.5);
 
}

#active_unit_info {
  float: left;
  color: white;
  background-color: rgba(0,0,0,0.6);
  font-size: 95%;
  padding-top: 2px;
}

#active_unit_info span {
  font-size: 75%;
}

#game_unit_panel {
  margin-left: -8px;
}

#city_table {
  width: 100%;
  cursor: pointer;
}

.cities_row {
  cursor:pointer;
}

#wiki_dialog {
  overflow: auto;
}

#cities_scroll {
  width: 100%;
  overflow: auto;
}

.negative_net_income {
  color: red;
  background-color: #330000;
}

.nation_table_body {
  background: rgba(0, 0, 0, 0.45);
}

.vert-attr-list th {
  padding-right: 0.5em;
  text-align: right;
}

.inteldlg_tabs { 
  margin: 0.5em 0em; 
} 

.inteldlg_tabs > ul {
  max-height: 400px;
  overflow-y: auto;
}

@media(max-height:600px) {
  .inteldlg_tabs > ul {
    max-height: 250px;
    overflow-y: auto;
  }
}

#intel_tabs-technology ul {
  list-style-type: none;
  position: relative;
}

li.tech-them {
  font-weight: bold;
}

li.tech-them::before {
  content: '\2605';
  position: absolute;
  left: 1em;
}

li.tech-both::before {
  content: '\2713';
  position: absolute;
  left: 1em;
}

.e_next_year {
  border-top: 2px #555555 groove;
  margin-top: 0.5em;
  padding-bottom: 0.5em;
}


#chat_context_dialog {
  overflow-y: auto;
}

#chat_context_dialog tr:hover {
  background-color: rgba(240, 240, 240, 0.75);
}

#chat_context_dialog canvas {
  vertical-align: middle;
}


.ui-widget-header .ui-icon {
  background-image: url(images/ui-icons_c47a23_256x240.png);
}

#nations_title {
  font-size: 170%;
  float: left;
  padding: 10px;
}

#nations_label {
  float: left;
  padding: 15px;
}

#technology_dialog {
  overflow: hidden;
}

/* Diplomacy dialog. */

.diplomacy_messages {
  background: url("/images/bg-dark.jpg") repeat scroll 0 0 ;
  min-height: 20px;
  max-height: 200px;
  overflow: auto;
  border: 1px solid #555555;
  width: 100%;
  font-size: 130%;
  margin: 3px;
  margin-bottom: 10px;
  padding-bottom: 10px;
}

.diplomacy_messages a {
  color: white;
}

.diplomacy_player_box {
  width: 50%;
  float: left;
  text-align:center;
}

.diplomacy_player_box h3 {
  clear: both;
  width: 100%;
  padding-top: 1em;
}

.dipl_div {
  float: left;
  text-align: left;
  font-size: 14px;
  white-space: nowrap;
  z-index: 2000;
}

.dipl_div a {
  color: #1e1b1d;
  text-decoration: none;
}

.dipl_add {
  z-index: 100;
}

.agree_self {
  float: left;
}

.agree_counterpart {
  float: right;
}

.diplomacy_gold {
  padding: 8px;
  font-size: 80%;
}

.diplomacy_gold input {
  height: 15px;
  font-size: 14px;
  width: 40px;
}

.menu-button-activator {
  font-size: 14px;
  float: left;
  margin: 0 4px 40px 20px;
  padding: .4em 1em;
  text-decoration: none !important;
  cursor: pointer;
  position: relative;
  text-align: center;
}

.menu-button-activator .ui-icon {
  position: absolute;
  top: 50%;
  margin-top: -8px;
  left: auto;
  margin-left: 0;
  right: .2em;
}

#civ_dialog_text {
  max-width: 70%;
  padding: 5px;
  background-color: rgba(0,0,0,0.1);
  font-size: 90%;
}

#civ_dialog_flag {
  padding: 5px;
}

#fciv-intro {
    position: absolute;
    top: 20px;
    left: 50%;
    min-width: 300px;
    z-index: 1000;
    max-width: 80%;
    color: white;
    font-size: 16px;
    font-weight: bold;

}

#fciv-intro-txt {
    background-color: rgba(1.0, 1.0, 1.0, 0.5);
}

.prod_choice_name {
  font-weight: bold;
}

#cma_form {
  float: left;
  padding-left: 100px;
  padding-top: 20px;
  border-spacing: 30px;
  font-size: 140%;
}

.cma_checkbox {
  width: 20px;
  height: 20px;
}

.noTitleBar .ui-dialog-titlebar {
  height: 13px;
}

#worklist_production_choices .ui-selecting {
  background: #FECA40;
}

#worklist_production_choices .ui-selected {
  background: #337ab7;
  color: white;
}

#worklist_production_choices {
  list-style-type: none;
  margin: 0;
  padding: 0;
  width: 100%;
}
/* ... */

